--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "next": "15.1.6",
     "openai": "^4.80.1",
     "react": "^19.0.0",
